# electricity-outage-checker

./: .gitignore  LICENSE  README.md  outage-checker.spec  pyproject.toml  run.py
.github/workflows/: build.yml  publish.yml  release.yml
src/electricity_outage_checker/: __init__.py  cli.py  client.py  config.py  models.py
